--- a/productos.html
+++ b/productos.html
@@ -20,76 +20,78 @@
         Envío GRATIS con compras mayores a $3.000!
       </header>
 <!-- inicia nav 1 -->
-      <nav class="navbar navbar-expand-lg bg-nav" id="nav1">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">
-            <img src="img/logo.png" alt="logo de MLS creaciones"/>
-          </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
+<nav class="navbar navbar-expand-lg bg-nav" id="nav1">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="index.html">
+      <img src="img/logo.png" alt="logo de MLS creaciones" />
+    </a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon">
+        <img src="img/hamburguerButton.png" class="w-40" alt="ícono de botón hamburguesa">
+      </span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a
+            class="nav-link active"
+            aria-current="page"
+            href="productos.html"
+            >Productos</a
           >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="productos.html"
-                  >Productos</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="disenios_disponibles.html"
-                  >Diseños Disponibles</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="sobre_mi.html"
-                  >Sobre Mí</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="faqs_contacto.html"
-                  >FAQs & Contacto</a
-                >
-              </li>
-              <li>
-                <a href="#"
-                  ><img
-                    src="img/user.png"
-                    alt="logo de inicio de sesión de usuario"
-                    class="imgNav"
-                /></a>
-              </li>
-              <li>
-                <a href="#"
-                  ><img
-                    src="img/cart.png"
-                    alt="logo de carrito de compras"
-                    class="imgNav"
-                /></a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link active"
+            aria-current="page"
+            href="disenios_disponibles.html"
+            >Diseños Disponibles</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link active"
+            aria-current="page"
+            href="sobre_mi.html"
+            >Sobre Mí</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link active"
+            aria-current="page"
+            href="faqs_contacto.html"
+            >FAQs & Contacto</a
+          >
+        </li>
+        <li>
+          <a href="#"
+            ><img
+              src="img/user.png"
+              alt="logo de inicio de sesión de usuario"
+              class="imgNav"
+          /></a>
+        </li>
+        <li>
+          <a href="#"
+            ><img
+              src="img/cart.png"
+              alt="logo de carrito de compras"
+              class="imgNav"
+          /></a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 <!-- ends nav 1 -->
 <!-- inicia nav 2 -->
       <nav id="filtros" class="nav2 animate__animated animate__fadeInLeft">
@@ -113,8 +115,9 @@
         <!-- inician productos -->
         <section class="py-3 animate__animated animate__fadeIn">
           <div class="container-fluid">
-            <h2 class="text-center">Cartucheras <a href="estampados_disponibles.html">(Estampado a Elección)</a>
+            <h2 class="text-center">Cartucheras <a href="disenios_disponibles.html">(Estampado a Elección)</a>
             </h2>
+            <h3>Medidas expresadas en largo x alto x ancho</h4>
             <div class="row">
               <article class="col-md-6 col-lg-3 pb-3 text-center">
                 <div class="card">
@@ -124,8 +127,8 @@
                     alt="imagen de cartuchera modelo pocket"
                   />
                   <div class="card-body">
-                    <h3 class="card-title">Cartu Pocket</h3>
-                    <p class="size">Medidas (largo-alto-ancho): (18 x 5 x 6) cm</p>
+                    <h4 class="card-title">Cartu Pocket</h4>
+                    <p class="size">(18 x 5 x 6) cm</p>
                     <p class="price">$350</p>
                     <a href="" class="btn w-100">Agregar Artículo</a>
                 </div>
@@ -140,8 +143,8 @@
                   alt="imagen de cartuchera modelo peque"
                   />
                   <div class="card-body">
-                    <h3 class="card-title">Cartu Peque</h3>
-                    <p class="size">Medidas (largo-alto-ancho): (18 x 7 x 8) cm</p>
+                    <h4 class="card-title">Cartu Peque</h4>
+                    <p class="size">(18 x 7 x 8) cm</p>
                     <p class="price">$550</p>
                     <a href="" class="btn w-100">Agregar Artículo</a>
                 </div>
@@ -156,8 +159,8 @@
                   alt="imagen de cartuchera modelo neceser"
                   />
                   <div class="card-body">
-                    <h3 class="card-title">Cartu Neceser</h3>
-                    <p class="size">Medidas (largo-alto-ancho): (20 x 10 x 8) cm</p>
+                    <h4 class="card-title">Cartu Neceser</h4>
+                    <p class="size">(20 x 10 x 8) cm</p>
                     <p class="price">$700</p>
                     <a href="" class="btn w-100">Agregar Artículo</a>
                 </div>
@@ -172,8 +175,8 @@
                   alt="imagen de cartuchera neceser XL"
                   />
                   <div class="card-body">
-                    <h3 class="card-title">Cartu Neceser XL</h3>
-                    <p class="size">Medidas (largo-alto-ancho): (23 x 19 x 12) cm</p>
+                    <h4 class="card-title">Cartu Neceser XL</h4>
+                    <p class="size">(23 x 19 x 12) cm</p>
                     <p class="price">$900</p>
                     <a href="" class="btn w-100">Agregar Artículo</a>
                 </div>
@@ -197,7 +200,7 @@
                   alt="imagen de agenda modelo travel"
                   />
                   <div class="card-body">
-                    <h3 class="card-title">Modelo Travel</h3>
+                    <h4 class="card-title">Modelo Travel</h4>
                     <p class="price">$500</p>
                     <a href="" class="btn w-100">Agregar Artículo</a>
                 </div>
@@ -212,7 +215,7 @@
                     alt="imagen de agenda modelo zoo"
                   />
                   <div class="card-body">
-                    <h3 class="card-title">Modelo Zoo</h3>
+                    <h4 class="card-title">Modelo Zoo</h4>
                     <p class="price">$550</p>
                     <a href="" class="btn w-100">Agregar Artículo</a>
                 </div>
@@ -227,7 +230,7 @@
                     alt="imagen de agenda modelo bullet"
                   />
                   <div class="card-body">
-                    <h3 class="card-title">Modelo Bullet</h3>
+                    <h4 class="card-title">Modelo Bullet</h4>
                     <p class="price">$650</p>
                     <a href="" class="btn w-100">Agregar Artículo</a>
                 </div>
@@ -242,7 +245,7 @@
                     alt="imagen de agenda modelo dinos"
                   />
                   <div class="card-body">
-                    <h3 class="card-title">Modelo Dinos</h3>
+                    <h4 class="card-title">Modelo Dinos</h4>
                     <p class="price">$650</p>
                     <a href="" class="btn w-100">Agregar Artículo</a>
                 </div>
@@ -266,7 +269,7 @@
                     alt="imagen de combo bolso a4 y cartu modelo neceser"
                   />
                   <div class="card-body">
-                    <h3 class="card-title">Combo Perritos</h3>
+                    <h4 class="card-title">Combo Perritos</h4>
                     <p class="details">Incluye Bolso A4 y Cartu Modelo "Neceser"</p>
                     <p class="price">$950</p>
                     <a href="" class="btn w-100">Agregar Artículo</a>
@@ -283,7 +286,7 @@
                     alt="imagen de combo que incluye bolso matero, porta mate y yerbero"
                   />
                   <div class="card-body">
-                    <h3 class="card-title">Combo Matero</h3>
+                    <h4 class="card-title">Combo Matero</h4>
                     <p class="details">Incluye Bolso Matero, Porta Mate y Yerbero</p>
                     <p class="price">$1000</p>
                     <a href="" class="btn w-100">Agregar Artículo</a>
@@ -300,7 +303,7 @@
                     alt="imagen de combo de 2 libretas tamaño a6"
                   />
                   <div class="card-body">
-                    <h3 class="card-title">Combo Libretas</h3>
+                    <h4 class="card-title">Combo Libretas</h4>
                     <p class="size">
                     Incluye 2 libretas tamaño A6 -  (18 x 7 x 8) cm
                     </p>
@@ -319,7 +322,7 @@
                     alt="imagen de combo de cestito y jabón artesanal"
                   />
                   <div class="card-body">
-                    <h3 class="card-title">Combo Clean</h3>
+                    <h4 class="card-title">Combo Clean</h4>
                     <p class="size">
                     Incluye Cestito y Jabón Artesanal (Consultar Stock)</p>
                     <p class="price">$800</p>
@@ -335,8 +338,34 @@
         </section>
       </main>
       <aside id="aside" class="nav2 animate__animated animate__fadeInRight">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, libero quas eos omnis sequi ab corrupti ea magnam hic quo nam vel quos quisquam molestiae. Quod consectetur ipsam voluptatibus commodi.
-    </aside>
+        <figure>
+          <img src="img/personalizadoAside.png" alt="bombilla de luz con corazón en el centro, haciendo referencia a que las ideas de los diseños son originales">    
+          <figcaption>
+            Diseños 100% Originales
+          </figcaption>
+        </figure>
+
+        <figure>
+          <img src="img/calendarioAside.png" alt="calendario rosa, haciendo referencia que los pedidos están en listos en 10 días">    
+          <figcaption>
+            Pedidos listos en 10 días aproximadamente
+          </figcaption>
+        </figure>
+        
+        <figure>
+          <img src="img/envioAside.png" alt="silueta de país color rosa que indica que se realizan envíos a todo el país">    
+          <figcaption>
+           Envíos a todo el país
+          </figcaption>
+        </figure>
+
+        <figure>
+          <img src="img/pedidoAside.png" alt="caja de envío por correo lista para despachar, indicando que existen diferentes medios para enviar los productos">    
+          <figcaption>
+          Despacho seguro del producto garantizado
+          </figcaption>
+        </figure>
+</aside>
       <footer class="footer" id="footer">
         <div>
           <h3>Medios de Pago</h3>
