--- a/error404.html
+++ b/error404.html
@@ -3,16 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sobre Mí</title>
+    <title>Error 404 - Página no disponible</title>
     <meta
       name="description"
-      content="Te invito a conocer un poco más sobre mí y la historia de mi emprendimiento"
+      content="Pantalla que indica error 404 o página no disponible"
     />
     <meta
       name="keywords"
       content="cartucheras, agendas, bolsitos, artesanales, estampados originales, diseños a elección, compra online, tarjetas de crédito, cuotas, envíos"
     />
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/animate.css" />
@@ -21,10 +20,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
   </head>
-
   <body>
-    <div class="contenedor">
-      <header class="encabezado__box" id="header">
+    <header class="encabezado__box" id="header">
         Envío GRATIS con compras mayores a $3.000!
       </header>
       <nav class="navbar navbar-expand-lg bg-nav" id="nav1">
@@ -42,11 +39,7 @@
             aria-label="Toggle navigation"
           >
             <span class="navbar-toggler-icon">
-              <img
-                src="img/hamburguerButton.png"
-                class="w-40"
-                alt="ícono de botón hamburguesa"
-              />
+              <img src="img/hamburguerButton.png" class="w-40" alt="ícono de botón hamburguesa" />
             </span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -103,76 +96,12 @@
           </div>
         </div>
       </nav>
-      <main
-        class="text-center animate__animated animate__fadeIn"
-        id="productos"
-      >
-        <article class="sobreMi__article">
-          <h1>Un poco más sobre mí</h1>
-          <a href="">
-            <img
-              src="img/marian.png"
-              alt="mi foto"
-              class="sobreMi__article--fotoMarian"
-            />
-          </a>
-          Hola! Muchas gracias por visitar la página de mi emprendimiento :) Soy
-          Mariana López Saraví, Licenciada en Gestión de Agroalimentos. Desde
-          pequeña me apasionan la costura y el tejido. Cuando empecé la
-          facultad, me di cuenta de lo feliz que me hacía tener accesorios de
-          cursada (cuadernos, agendas, carteras, bolsos) copados y
-          personalizados para alegrar la rutina universitaria. Esto me llevó a
-          plasmar uno de mis pasatiempos en este hermoso emprendimiento, donde
-          busco constantemente crear nuevos diseños que se adapten a las
-          necesidades y preferencias de las personas que me rodean. Los
-          estampados que trabajo son 100% originales, creados por diseñadores
-          independientes. Te invito a que conozcas mis productos, ideales para
-          regalar o regalarte!
-        </article>
-      </main>
-      <footer class="footer" id="footer">
-        <div>
-          <h3>Medios de Pago</h3>
-          <img
-            src="img/medios_pago.png"
-            alt="medios de pago"
-            class="footer__image"
-          />
-        </div>
-        <div>
-          <h3>Medios de Envío</h3>
-          <img
-            src="img/medios_envio.png"
-            alt="medios de envío"
-            class="footer__image"
-          />
-        </div>
-        <div>
-          <h3>Redes Sociales</h3>
-          <a
-            href="https://es-la.facebook.com/pages/category/Interest/MLS-creaciones-1663628870628480/"
-            target="_blank"
-          >
-            <img
-              src="img/facebook.png"
-              alt="Seguime en Facebook"
-              class="footer__icon"
-            />
-          </a>
-          <a
-            href="https://www.instagram.com/mlscreaciones/?hl=es-la"
-            target="_blank"
-          >
-            <img
-              src="img/instagram.png"
-              alt="Seguime en Instragram"
-              class="footer__icon"
-            />
-          </a>
-        </div>
-      </footer>
-    </div>
-    <!-- fin del contenedor-->
+    <div class="error404">
+<h1>Ups! Parece que la pagina que estás buscando no está disponible</h1>
+    <img src="img/error404.png" alt="Imagen de Mariana sonriendo, indicando página no encontrada">
+    <p>Te invito a volver a la página principal haciendo click <a href="index.html">acá</a></p>
+    
+</div>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="js/bootstrap.min.js"></script>
   </body>
