--- a/faqs_contacto.html
+++ b/faqs_contacto.html
@@ -29,7 +29,7 @@
       <nav class="navbar navbar-expand-lg bg-nav" id="nav1">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
-            <img src="img/logo.png" alt="logo de MLS creaciones" class="w-70" />
+            <img src="img/logo.png" alt="logo de MLS creaciones" />
           </a>
           <button
             class="navbar-toggler"
@@ -40,7 +40,9 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-            <span class="navbar-toggler-icon bg-dark"></span>
+            <span class="navbar-toggler-icon">
+              <img src="img/hamburguerButton.png" class="w-40" alt="ícono de botón hamburguesa">
+            </span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -104,7 +106,7 @@
             <div class="row">
               <h2>Preguntas Frecuentes</h2>
               <!-- inicia card 1 -->
-              <article class="col-md-6 col-lg-6">
+              <article class="col-sm-12 col-md-6 col-lg-6">
                 <div class="card">
                   <img
                     src="img/armarPedido.png"
@@ -114,15 +116,19 @@
                   <div class="card-body">
                     <h4 class="card-title">Cómo Comprar</h4>
                     <p class="card-text">
-                      Some quick example text to build on the card title and
-                      make up the bulk of the card's content.
+                      <p>1. Hacé click en "Agregar Artículo" para agregar producto al carrito de compras
+                      </p>
+                      <p>2. Cuando hayas terminado el pedido, hacé click en "Iniciar Compra"
+                      </p>
+                      <p>3. Completá tus datos de contacto y hacé click en "Continuar"
+                      </p>
                     </p>
                   </div>
                 </div>
               </article>
               <!-- ends card 1 -->
               <!-- inicia card 2 -->
-              <article class="col-md-6 col-lg-6">
+              <article class="col-sm-12 col-md-6 col-lg-6">
                 <div class="card">
                   <img
                     src="img/faqs_pago_envio.png"
@@ -132,8 +138,11 @@
                   <div class="card-body">
                     <h4 class="card-title">Modalidades Pago y Envío</h4>
                     <p class="card-text">
-                      Some quick example text to build on the card title and
-                      make up the bulk of the card's content.
+                      <p>4. Ingresá tu código postal y seleccioná el método de envío que prefieras</p>
+                      <p>5. Seleccioná el medio de pago</p>
+                      <p>6. Antes de finalizar la compra, verificá que todos los datos informados sean correctos</p>
+                      <p>7. Hacé click en "Finalizar Compra" y listo! </p>
+                      <p> Aclaración: tené en cuenta que tu pedido estará listo en 10 días aproximadamente (una vez que esté listo, te voy a contactar por mail!)</p>
                     </p>
                   </div>
                 </div>
@@ -148,7 +157,7 @@
             class="bg-light p-2 container-fluid animate__animated animate__fadeInRight"
           >
             <div class="row">
-              <article class="col-lg-6 p-1" id="formularioContacto">
+              <article class="col-sm-12 col-md-6 col-lg-6 p-1" id="formularioContacto">
                 <h2>Contacto</h2>
                 <form>
                   <div class="form-group row">
@@ -221,17 +230,17 @@
                   </fieldset>
                   <div class="form-group row">
                     <div class="col-sm-10">
-                      <button type="submit" class="btn-submit">Enviar</button>
+                      <button type="submit" class="btn-submit"><a href="error404.html">Enviar</a></button>
                       <button type="reset" class="btn-reset">Cancelar</button>
                     </div>
                   </div>
                 </form>
               </article>
               <!-- ends form-->
-              <article class="col-lg-6">
+              <article class="col-sm-12 col-md-6 col-lg-6">
                 <img
-                  src="img/marian.png"
-                  alt="foto de mariana"
+                src="img/contactoFormulario.png"
+                alt="foto de mariana"
                   class="img-thumbnail"
                 />
               </article>
