--- a/index.html
+++ b/index.html
@@ -43,7 +43,13 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon">
+              <img
+                src="img/hamburguerButton.png"
+                class="w-40"
+                alt="ícono de botón hamburguesa"
+              />
+            </span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -99,7 +105,6 @@
           </div>
         </div>
       </nav>
-
       <main class="text-center" id="productos">
         <h1>Bienvenid@s a MLS Creaciones!</h1>
         <div
@@ -107,24 +112,48 @@
           class="carousel slide"
           data-bs-ride="carousel"
         >
-          <div class="carousel-inner">
+          <div class="carousel-index">
             <div class="carousel-item active">
-              <img src="img/index1.png" class="d-block w-40" alt="imagen de cartu neceser y florero decorativo" />
+              <img
+                src="img/index1.png"
+                class="d-block w-40"
+                alt="imagen de cartu neceser y florero decorativo"
+              />
             </div>
             <div class="carousel-item">
-              <img src="img/index2.png" class="d-block w-40" alt="imagen de combo matero que incluye bolso, porta yerba y porta azúcar" />
+              <img
+                src="img/index2.png"
+                class="d-block w-40"
+                alt="imagen de combo matero que incluye bolso, porta yerba y porta azúcar"
+              />
             </div>
             <div class="carousel-item">
-              <img src="img/index4.png" class="d-block w-40" alt="imagen de Mariana con bolsito sosteniendo lona con estampado floral y bolsito A4 de fondo" />
+              <img
+                src="img/index4.png"
+                class="d-block w-40"
+                alt="imagen de Mariana con bolsito sosteniendo lona con estampado floral y bolsito A4 de fondo"
+              />
             </div>
             <div class="carousel-item">
-              <img src="img/index3.png" class="d-block w-40" alt="imagen de tres cartucheras modelo sobre" />
+              <img
+                src="img/index3.png"
+                class="d-block w-40"
+                alt="imagen de tres cartucheras modelo sobre"
+              />
             </div>
             <div class="carousel-item">
-              <img src="img/index5.png" class="d-block w-40" alt="imagen de tres modelos de agendas" />
+              <img
+                src="img/index5.png"
+                class="d-block w-40"
+                alt="imagen de tres modelos de agendas"
+              />
             </div>
             <div class="carousel-item">
-              <img src="img/index6.png" class="d-block w-40" alt=".imagen de Mariana con máquina de coser />
+              <img
+                src="img/index6.png"
+                class="d-block w-40"
+                alt=".imagen de Mariana con máquina de coser"
+              />
             </div>
           </div>
         </div>
