Corrección de error404.html

--- a/error404.html
+++ b/error404.html
@@ -97,9 +97,9 @@
         </div>
       </nav>
     <div class="error404">
-<h1>Ups! Parece que la pagina que estás buscando no está disponible</h1>
+<h1>Ups! Parece que la página que estás buscando no está disponible</h1>
     <img src="img/error404.png" alt="Imagen de Mariana sonriendo, indicando página no encontrada">
-    <p>Te invito a volver a la página principal haciendo click <a href="index.html">acá</a></p>
+    <p>Te invito a volver al inicio haciendo click <a href="index.html">acá</a></p>
     
 </div>
     <!-- Option 1: Bootstrap Bundle with Popper -->
