Eliminación de NavBar en error404.html

--- a/error404.html
+++ b/error404.html
@@ -21,87 +21,16 @@
     />
   </head>
   <body>
-    <header class="encabezado__box" id="header">
-        Envío GRATIS con compras mayores a $3.000!
-      </header>
-      <nav class="navbar navbar-expand-lg bg-nav" id="nav1">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">
-            <img src="img/logo.png" alt="logo de MLS creaciones" />
-          </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon">
-              <img src="img/hamburguerButton.png" class="w-40" alt="ícono de botón hamburguesa" />
-            </span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="productos.html"
-                  >Productos</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="disenios_disponibles.html"
-                  >Diseños Disponibles</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="sobre_mi.html"
-                  >Sobre Mí</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="faqs_contacto.html"
-                  >FAQs & Contacto</a
-                >
-              </li>
-              <li>
-                <a href="#"
-                  ><img
-                    src="img/user.png"
-                    alt="logo de inicio de sesión de usuario"
-                    class="imgNav"
-                /></a>
-              </li>
-              <li>
-                <a href="#"
-                  ><img
-                    src="img/cart.png"
-                    alt="logo de carrito de compras"
-                    class="imgNav"
-                /></a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
     <div class="error404">
-<h1>Ups! Parece que la página que estás buscando no está disponible</h1>
-    <img src="img/error404.png" alt="Imagen de Mariana sonriendo, indicando página no encontrada">
-    <p>Te invito a volver al inicio haciendo click <a href="index.html">acá</a></p>
-    
-</div>
+      <h1>Ups! Parece que la página que estás buscando no está disponible</h1>
+      <img
+        src="img/error404.png"
+        alt="Imagen de Mariana sonriendo, indicando página no encontrada"
+      />
+      <p>
+        Te invito a volver al inicio haciendo click <a href="index.html">acá</a>
+      </p>
+    </div>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="js/bootstrap.min.js"></script>
   </body>
